- fixing refs in head

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     		/* doc ready */
     		$( function( )
             {
-    			/* init the slideshow */
+    			/* init the plugin */
     			$( '#marquee' ).slideshow( );
     		});
     	})( jQuery );
