--- a/index.html
+++ b/index.html
@@ -5,43 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>jQuery slideshow plugin</title>
+	<!-- css -->
 	<link type="text/css" media="all" href="css/main.css" rel="stylesheet" />
-    <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
+	<link type="text/css" media="all" href="css/slideshow.css" rel="stylesheet" />
+
+	<!-- js -->
+	<script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
     <script type="text/javascript" src="js/slideshow.js"></script>
 </head>
 <body>
 	<div class="container">
 		<div class="whitebox">
-			<h1>jQuery slideshow plugin</h1>
-            <div id="marquee" class="slideshow">
-        		<div class="slides">
-        			<a href="#" class="slide active"><img src="images/sample_image_1.jpg" alt="" /></a>
-        			<a href="#" class="slide"><img src="images/sample_image_2.jpg" alt="" /></a>
-        			<a href="#" class="slide"><img src="images/sample_image_3.jpg" alt="" /></a>
-        			<a href="#" class="slide"><img src="images/sample_image_4.jpg" alt="" /></a>
-                    <a href="#" class="slide"><img src="images/sample_image_5.jpg" alt="" /></a>
-        		</div>
-        		<div class="controls">
-        			<a href="#" class="control active"></a>
-        			<a href="#" class="control"></a>
-        			<a href="#" class="control"></a>
-        			<a href="#" class="control"></a>
-        		</div>
-        	</div>
-            <p><i>Sample public-domain images courtesy of Wikimedia Commons</i></p>
+			<h1>Slideshow plugin demos</h1>
+			<p>
+				Below are demos of the thumb slider plugin from the public GitHub project found here: <a href="https://github.com/mlmedia/slideshow" title="Slideshow plugin on GitHub" target="_blank">https://github.com/mlmedia/slideshow</a>.  Each section displays a different instance of the plugin determined by the initialization options and CSS.
+			</p>
+			<hr />
+			<h2><a href="demos/demo_1.html" title="Slideshow DEMO #1">Slideshow DEMO #1</a></h2>
+			<p>
+				Unstyled slideshow with no extra CSS
+			</p>
+			<hr />
+			<p>
+				<i>All public domain images are courtesy of <a href="https://commons.wikimedia.org/wiki/Main_Page" title="Wikimedia Commons" target="_blank">Wikimedia Commons</a>.</i>
+			</p>
 		</div>
 	</div>
-    <script type="text/javascript">
-    	/* define $ as jQuery just in case */
-    	( function( $ )
-        {
-    		/* doc ready */
-    		$( function( )
-            {
-    			/* init the plugin */
-    			$( '#marquee' ).slideshow( );
-    		});
-    	})( jQuery );
-    </script>
 </body>
 </html>
