- fixing some JS issues on page load active

--- a/demos/demo_1.html
+++ b/demos/demo_1.html
@@ -28,17 +28,18 @@
 			<hr />
 			<div id="my_slideshow">
 				<div class="slides">
-					<a href="#" class="slide active"><img src="../images/sample_image_1.jpg" alt="" /></a>
+					<a href="#" class="slide"><img src="../images/sample_image_1.jpg" alt="" /></a>
 					<a href="#" class="slide"><img src="../images/sample_image_2.jpg" alt="" /></a>
 					<a href="#" class="slide"><img src="../images/sample_image_3.jpg" alt="" /></a>
 					<a href="#" class="slide"><img src="../images/sample_image_4.jpg" alt="" /></a>
 					<a href="#" class="slide"><img src="../images/sample_image_5.jpg" alt="" /></a>
 				</div>
 				<div class="controls">
-					<a href="#" class="control active">1</a>
+					<a href="#" class="control">1</a>
 					<a href="#" class="control">2</a>
 					<a href="#" class="control">3</a>
 					<a href="#" class="control">4</a>
+					<a href="#" class="control">5</a>
 				</div>
 			</div>
 			<script type="text/javascript">
