- styling demo #2 and adding responsive CSS

--- a/demos/demo_2.html
+++ b/demos/demo_2.html
@@ -19,7 +19,7 @@
 			<div id="breadcrumbs">
 				&lt;&lt;&nbsp;<a href="../index.html" title="Slideshow DEMO index">DEMO index</a>
 			</div>
-			<h1>Slideshow plugin - DEMO #1</h1>
+			<h1>Slideshow plugin - DEMO #2</h1>
 			<p>
 				Below is a demo of the slideshow plugin from the public GitHub project found here: <a href="https://github.com/mlmedia/slideshow" title="Slideshow plugin on GitHub" target="_blank">https://github.com/mlmedia/slideshow</a>.
 			</p>
@@ -27,7 +27,7 @@
 				<i>All public domain images are courtesy of <a href="https://commons.wikimedia.org/wiki/Main_Page" title="Wikimedia Commons" target="_blank">Wikimedia Commons</a>.</i>
 			</p>
 			<hr />
-			<div id="my_slideshow">
+			<div id="slideshow-2">
 				<div class="slides">
 					<a href="#" class="slide"><img src="../images/sample_image_1.jpg" alt="" /></a>
 					<a href="#" class="slide"><img src="../images/sample_image_2.jpg" alt="" /></a>
@@ -51,7 +51,7 @@
 					$( function( )
 					{
 						/* init the plugin */
-						$( '#my_slideshow' ).slideshow( );
+						$( '#slideshow-2' ).slideshow( );
 					});
 				})( jQuery );
 			</script>
