--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 			<hr />
 			<h2><a href="demos/demo_1.html" title="Slideshow DEMO #1">Slideshow DEMO #1</a></h2>
 			<p>
-				Unstyled slideshow with no extra CSS
+				Unstyled slideshow with no extra CSS.
+			</p>
+			<h2><a href="demos/demo_2.html" title="Slideshow DEMO #2">Slideshow DEMO #2</a></h2>
+			<p>
+				Slideshow with CSS styling to overlay the controls on the slideshow.
 			</p>
 			<hr />
 			<p>
