--- a/demos/demo_1.html
+++ b/demos/demo_1.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>jQuery slideshow plugin</title>
 	<!-- css -->
@@ -11,8 +12,9 @@
 
 	<!-- js -->
 	<script type="text/javascript" src="../js/jquery-1.11.3.min.js"></script>
-    <script type="text/javascript" src="../js/slideshow.js"></script>
+	<script type="text/javascript" src="../js/slideshow.js"></script>
 </head>
+
 <body>
 	<div class="container">
 		<div class="whitebox">
@@ -29,11 +31,21 @@
 			<hr />
 			<div id="my_slideshow">
 				<div class="slides">
-					<a href="#" class="slide"><img src="../images/sample_image_1.jpg" alt="" /></a>
-					<a href="#" class="slide"><img src="../images/sample_image_2.jpg" alt="" /></a>
-					<a href="#" class="slide"><img src="../images/sample_image_3.jpg" alt="" /></a>
-					<a href="#" class="slide"><img src="../images/sample_image_4.jpg" alt="" /></a>
-					<a href="#" class="slide"><img src="../images/sample_image_5.jpg" alt="" /></a>
+					<a href="#" class="slide">
+						<img src="../images/sample_image_1.jpg" alt="" />
+					</a>
+					<a href="#" class="slide">
+						<img src="../images/sample_image_2.jpg" alt="" />
+					</a>
+					<a href="#" class="slide">
+						<img src="../images/sample_image_3.jpg" alt="" />
+					</a>
+					<a href="#" class="slide">
+						<img src="../images/sample_image_4.jpg" alt="" />
+					</a>
+					<a href="#" class="slide">
+						<img src="../images/sample_image_5.jpg" alt="" />
+					</a>
 				</div>
 				<div class="controls">
 					<a href="#" class="control">1</a>
@@ -45,17 +57,16 @@
 			</div>
 			<script type="text/javascript">
 				/* define $ as jQuery just in case */
-				( function( $ )
-				{
+				(function($) {
 					/* doc ready */
-					$( function( )
-					{
+					$(function() {
 						/* init the plugin */
-						$( '#my_slideshow' ).slideshow( );
+						$('#my_slideshow').slideshow();
 					});
-				})( jQuery );
+				})(jQuery);
 			</script>
 		</div>
 	</div>
 </body>
+
 </html>
